--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,15 @@
         width: auto;
         height: auto;
     }
+    nav.navbar .dropdown:hover>.dropdown-menu {
+        display: block;
+    }
+}
+
+@media only screen and (max-device-width: 992px) {
+    nav.navbar .dropdown:hover .dropdown-menu {
+        display: none;
+    }
 }
 
 @media all {
